Fix #1215. Don't sidebar collapse on Personal Server.

--- a/webapp/src/components/sidebar/sidebar.scss
+++ b/webapp/src/components/sidebar/sidebar.scss
@@ -140,7 +140,7 @@
     }
 
     @media screen and (min-width: 768px) {
-        .sidebarSwitcher {
+        .WorkspaceTitle .sidebarSwitcher {
             display: none;
         }
     }
